--- a/css/responsive.css
+++ b/css/responsive.css
@@ -210,7 +210,7 @@ figure figcaption p {
     line-height: normal;
     text-decoration: none;
     padding: 15px;
-    color: #333;
+    color: #000;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
   .dropdown-menu > ul {
@@ -224,11 +224,13 @@ figure figcaption p {
     background-color: rgba(255, 255, 255, 0.95);
     box-shadow: 0 2px 0.09px rgba(0, 0, 0, 0.15);
   }
-  .navbar-collapse {
-    background: #333333;
+
+   .navbar-collapse {
+    background: transparent;
   }
+ 
   #top-bar .main-menu li > a {
-    color: #fff;
+    color: #333333;;
     padding: 21px 10px;
     background: transparent;
   }
@@ -375,6 +377,38 @@ figure figcaption p {
   text-transform: uppercase;
 }
 
+
+}
+@media only screen and (max-width: 480px) {
+ .navbar-collapse {
+    background: #333333;
+  }
+
+   #top-bar .main-menu li > a {
+    color: #fff;
+    padding: 21px 10px;
+    background: transparent;
+  }
+.dropdown-menu > ul > li > a {
+    display: block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration: none;
+    padding: 15px;
+    color: #fff;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  .dropdown-menu > ul {
+    list-style: none;
+    padding: 0 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-top: -5px;
+    background-color: rgba(255, 255, 255, 0.95);
+    box-shadow: 0 2px 0.09px rgba(0, 0, 0, 0.15);
+  }
 
 }
 /*		Wide Mobile Layout: 480px.
