--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,9 @@ p.title{
 #hero-area {
   background: url('../images/slider.jpg') no-repeat 50%;
   background-size: cover;
+  -webkit-background-size: cover;
   background-attachment: fixed;
+  background-position: center center;
   padding: 230px 0;
   color: #fff;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
